Updated to version 2.0.0 and uses a single HttpClient for all http calls